add lambda feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "packages/fullstack",
     "packages/server-macro",
     "packages/fullstack/examples/axum-hello-world",
+    "packages/fullstack/examples/aws-lambda",
     "packages/fullstack/examples/axum-router",
     "packages/fullstack/examples/axum-streaming",
     "packages/fullstack/examples/axum-desktop",
