--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
     "packages/hot-reload",
     "packages/fullstack",
     "packages/server-macro",
+    "packages/fullstack/examples/aws-lambda",
     "packages/fullstack/examples/axum-hello-world",
     "packages/fullstack/examples/axum-router",
     "packages/fullstack/examples/axum-streaming",
