--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -57,6 +57,8 @@ tower-layer = { version = "0.3.2", optional = true }
 web-sys = { version = "0.3.61", optional = true, features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
 
 dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
+lambda_http = { version = "0.12.0", optional = true }
+lambda_runtime = { version = "0.12.0", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { workspace = true, features = ["rt", "sync"], optional = true }
@@ -95,3 +97,4 @@ server = [
     "thiserror",
     "dioxus-cli-config"
 ]
+lambda = ["lambda_http","lambda_runtime"]
